# osenstack

./: .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docker/: entrypoint.sh
docs/: AGENT_OS_MCP_TOOL_CATALOG.md  HANDOFF_Enstack_Agent_OS_Session.md  agent_os_openapi.yaml
migrations/: env.py  script.py.mako
migrations/versions/: d787fbff17d9_initial_schema.py
scripts/: seed_sandbox.py  spec_diff.py
src/enos/: __init__.py  config.py  db.py  ids.py
src/enos/api/: app.py  deps.py  envelope.py  middleware.py
src/enos/api/routes/: __init__.py  activity.py  agents.py  approvals.py  (+10 more)
src/enos/ledger/: __init__.py  posting.py
src/enos/mcp/: app.py  runtime.py
src/enos/models/: __init__.py  base.py  control.py  identity.py  ledger.py  money_movement.py  products.py
src/enos/policy/: __init__.py  engine.py  types.py
src/enos/providers/: base.py  registry.py  sandbox.py
src/enos/schemas/: __init__.py  common.py  control.py  identity.py  money_movement.py  products.py
src/enos/services/: activity.py  agents.py  approvals.py  cards.py  context.py  counterparties.py  credentials.py  errors.py  ledger.py  owners.py  payments.py  policies.py  policy_gate.py  quotes.py  serialize.py  transfers.py  usage.py  virtual_accounts.py  webhooks.py
src/enos/worker/: app.py
tests/: README.md  conftest.py  test_approvals.py  test_auth_tenancy.py  test_idempotency.py  test_ledger.py  test_mcp.py  test_payments_policy.py  test_policy_engine.py  test_spec_roundtrip.py
