[project]
name = "enos"
version = "0.1.0"
description = "Enstack Agent OS — Phase 0 sandbox (api | mcp | worker)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "celery>=5.4",
    "redis>=5.0",
    "mcp>=1.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-ulid>=2.7",
]

[dependency-groups]
dev = [
    "pgserver>=0.1.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enos"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "UP042", "UP046"]  # (str, Enum) and Generic[T] are deliberate pydantic patterns
